--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -4,17 +4,14 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       layout:decorator="layout">
-
 <head>
-  <title>Home</title>
+    <title>Admin Home</title>
 </head>
 <body>
 <div layout:fragment="content">
-
-  <p sec:authorize="isAnonymous()"><a th:href="@{/login}">Login</a></p>
-  <p><a th:href="@{/home}">User Home</a></p>
-  <p><a th:href="@{/admin/home}">Admin Home</a></p>
-  <p sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></p>
+    <p>Welcome Administrator(<span sec:authentication="principal.username">Admin</span>)</p>
+    <p sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></p>
 </div>
+<h1>This is admin home page</h1>
 </body>
 </html>
