--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,20 +1,52 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
-      layout:decorator="layout">
-
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-  <title>Home</title>
+  <meta charset="ISO-8859-1">
+  <title>Registration and Login App</title>
+
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+
 </head>
 <body>
-<div layout:fragment="content">
+<!-- create navigation bar ( header) -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed"
+              data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+              aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span> <span
+              class="icon-bar"></span> <span class="icon-bar"></span> <span
+              class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#" th:href="@{/}">Registration and
+        Login Module</a>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-  <p sec:authorize="isAnonymous()"><a th:href="@{/login}">Login</a></p>
-  <p><a th:href="@{/home}">User Home</a></p>
-  <p><a th:href="@{/admin/home}">Admin Home</a></p>
-  <p sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></p>
+<br>
+<br>
+
+<div class="container">
+  <h1>Registration and Login with Spring Boot, Spring Security,
+    Thymeleaf, Hibernate and MySQL</h1>
+  Welcome <span sec:authentication="principal.username"> User</span>
+</div>
+<div sec:authorize="hasRole('ROLE_ADMIN')">
+  <h3>You will see this only if you are ADMIN</h3>
+  <p>
+    <a th:href="@{/admin}">Admin Home</a>
+  </p>
 </div>
 </body>
 </html>
