--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,70 +1,81 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
-      layout:decorator="layout">
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Log in</title>
+  <meta charset="ISO-8859-1">
+  <title>Registration and Login App</title>
+
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+
 </head>
 <body>
-<div layout:fragment="content">
-    <div class="panel col-md-5">
-        <div class="panel panel-primary">
-            <div class="panel-heading">Login Form</div>
-            <div class="panel-body">
-                <form action="home" th:action="@{/login}" method="post">
-                    <div class="form-group has-feedback">
-                        <input type="email" class="form-control" name="username"
-                               placeholder="Email" /> <span
-                            class="glyphicon glyphicon-envelope form-control-feedback"></span>
-                    </div>
-                    <div class="form-group has-feedback">
-                        <input type="password" class="form-control" name="password"
-                               placeholder="Password" /> <span
-                            class="glyphicon glyphicon-lock form-control-feedback"></span>
-                    </div>
-                    <div class="form-group">
-                        <label>
-                            <input type="checkbox" name="remember-me"> Remember Me
-                        </label>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-xs-offset-8 col-xs-4">
-                            <button type="submit" class="btn btn-primary btn-block btn-flat"
-                                    th:text="#{label.login}">LogIn</button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div th:if="${param.error}"
-                                 class="alert alert-danger alert-dismissable">
-                                <p>
-                                    <i class="icon fa fa-ban"></i> <span
-                                        th:text="#{error.login_failed}">Invalid Email and
-           Password.</span>
-                                </p>
-                            </div>
-                            <div th:if="${param.logout}"
-                                 class="alert alert-info alert-dismissable">
-                                <p>
-                                    <i class="icon fa fa-info"></i> <span
-                                        th:text="#{info.logout_success}">You have been logged
-           out.</span>
-                                </p>
-                            </div>
-                            <div th:if="${msg!=null}"
-                                 class="alert alert-warning alert-dismissable">
-                                <p>
-                                    <i class="icon fa fa-warning"></i> <span th:text="${msg}"></span>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
+
+<!-- create navigation bar ( header) -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed"
+              data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+              aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span> <span
+              class="icon-bar"></span> <span class="icon-bar"></span> <span
+              class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#" th:href="@{/}">Registration and
+        Login Module</a>
     </div>
+  </div>
+</nav>
+
+<br>
+<br>
+<div class = "container">
+  <div class = "row">
+    <div class = "col-md-6 col-md-offset-3">
+
+      <h1> User Login Page </h1>
+      <form th:action="@{/login}" method="post">
+
+        <!-- error message -->
+        <div th:if="${param.error}">
+          <div class="alert alert-danger">Invalid username or
+            password.</div>
+        </div>
+
+        <!-- logout message -->
+        <div th:if="${param.logout}">
+          <div class="alert alert-info">You have been logged out.</div>
+        </div>
+
+        <div class = "form-group">
+          <label for ="username"> Username </label> :
+          <input type="text" class = "form-control" id ="username" name = "username"
+                 placeholder="Enter Email ID" autofocus="autofocus">
+        </div>
+
+        <div class="form-group">
+          <label for="password">Password</label>: <input type="password"
+                                                         id="password" name="password" class="form-control"
+                                                         placeholder="Enter Password" />
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+              <input type="submit" name="login-submit" id="login-submit"
+                     class="form-control btn btn-primary" value="Log In" />
+            </div>
+          </div>
+        </div>
+      </form>
+      <div class="form-group">
+      <span>New user? <a href="/" th:href="@{/registration}">Register
+        here</a></span>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
