--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -44,6 +44,7 @@
 
             <form th:action="@{/registration}" method="post" th:object="${user}">
 
+
                 <div class="form-group">
                     <label class="control-label" for="email"> Email </label> <input
                         id="email" class="form-control" th:field="*{email}" required
@@ -51,9 +52,21 @@
                 </div>
 
                 <div class="form-group">
+                    <label class="control-label" for="email"> confirm Email </label> <input
+                        id="confirmEmail" class="form-control" th:field="*{confirmEmail}" required
+                        autofocus="autofocus" />
+                </div>
+
+                <div class="form-group">
                     <label class="control-label" for="password"> Password </label> <input
                         id="password" class="form-control" type="password"
                         th:field="*{password}" required autofocus="autofocus" />
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="password"> confirm Password </label> <input
+                        id="confirmPassword" class="form-control" type="password"
+                        th:field="*{confirmPassword}" required autofocus="autofocus" />
                 </div>
 
                 <div class="form-group">
