ajout template transaction-form.html + backend associé en développement

--- a/src/main/resources/templates/contact-list.html
+++ b/src/main/resources/templates/contact-list.html
@@ -42,7 +42,9 @@
 
 
                 <tr th:each="contact, stat : ${contactList}">
+                    <a href="/" th:href="@{/registration}">
                     <button><td class="align-middle" th:text="${contact.email}"></td></button>
+                    </a>
                 </tr>
 
             <div class="form-group">
