--- a/src/main/resources/templates/new-contact-form.html
+++ b/src/main/resources/templates/new-contact-form.html
@@ -43,6 +43,9 @@
 
       <form th:action="@{/addContact}" method="post" th:object="${contact}">
 
+        <div th:if="${param.error}">
+          <div class="alert alert-danger">Invalid email address</div>
+        </div>
 
         <div class="form-group">
           <label class="control-label" for="email"> Email </label> <input
