--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -44,6 +44,10 @@
 
             <form th:action="@{/registration}" method="post" th:object="${user}">
 
+                <div th:if="${param.error}">
+                    <div class="alert alert-danger">Invalid username or
+                        password.</div>
+                </div>
 
                 <div class="form-group">
                     <label class="control-label" for="email"> Email </label> <input
