Ajout du template transaction-history.html + backend associé

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,5 +48,13 @@
     <a th:href="@{/admin}">Admin Home</a>
   </p>
 </div>
+
+<div>
+  <a th:href="@{/contacts}">My contacts</a>
+</div>
+<div>
+  <a th:href="@{/transactions}">My transactions</a>
+</div>
+
 </body>
 </html>
