--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -21,8 +21,8 @@
                     class="icon-bar"></span> <span class="icon-bar"></span> <span
                     class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" th:href="@{/}">Registration and
-                Login Module</a>
+            <div class="navbar-brand">Registration and
+                Login Module</div>
         </div>
     </div>
 </nav>
