Ajout fonctionnalité d'ajout de compte bancaire

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,6 +55,9 @@
 <div>
   <a th:href="@{/transactions}">My transactions</a>
 </div>
+<div>
+  <a th:href="@{/bankAccounts}">My bank accounts</a>
+</div>
 
 </body>
 </html>
