--- a/src/main/resources/templates/bank-account-form.html
+++ b/src/main/resources/templates/bank-account-form.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="ISO-8859-1">
-  <title>Add contact</title>
+  <title>Add bank account</title>
   <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -39,7 +39,7 @@
           a new bank account!</div>
       </div>
 
-      <h1>Add a new contact</h1>
+      <h1>Add a new bank account</h1>
 
       <form th:action="@{/addBankAccount}" method="post" th:object="${bankAccount}">
 
