--- a/src/main/resources/templates/bank-accounts.html
+++ b/src/main/resources/templates/bank-accounts.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Contact list</title>
+    <title>Bank accounts</title>
 
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
