--- a/src/main/resources/templates/credit-card-transaction-history.html
+++ b/src/main/resources/templates/credit-card-transaction-history.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Transactions history</title>
+    <title>Credit Card transactions history</title>
 
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -34,20 +34,14 @@
     <div class = "row">
         <div class = "col-md-6 col-md-offset-3">
 
-            <h1> Your transactions as sender </h1>
+            <h1> Your credit card transactions </h1>
 
-            <tr th:each="transaction, stat : ${transactionsAsSender}">
-                <button><td class="align-middle" th:text="${transaction.description}"></td></button>
-            </tr>
-
-            <h1> Your transactions as receiver </h1>
-
-            <tr th:each="transaction, stat : ${transactionsAsReceiver}">
-                <button><td class="align-middle" th:text="${transaction.description}"></td></button>
+            <tr th:each="transaction, stat : ${creditCardTransactions}">
+                <button><td class="align-middle" th:text="${transaction.amount}"></td></button>
             </tr>
 
             <div class="form-group">
-                <span>Start a transaction ?<a href="/" th:href="@{/transaction}">Click here</a></span>
+                <span>Start a credit card transaction ?<a href="/" th:href="@{/creditCardTransaction}">Click here</a></span>
             </div>
         </div>
     </div>
