--- a/src/main/resources/templates/credit-card-form.html
+++ b/src/main/resources/templates/credit-card-form.html
@@ -44,7 +44,12 @@
             <form th:action="@{/addCreditCard}" method="post" th:object="${creditCard}">
 
                 <div th:if="${param.error}">
-                    <div class="alert alert-danger">Invalid credit card</div>
+                    <div class="alert alert-danger">
+                        <tr th:if="${errors.isEmpty()}">An error occurred</tr>
+                        <ul>
+                            <li th:each="error, stat : ${errors}" th:text="${error.defaultMessage}" class="error"/>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="form-group">
