--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
   </p>
 </div>
 
-<div>
+<div >
   <a th:href="@{/contacts}">My contacts</a>
 </div>
 <div>
@@ -59,13 +59,17 @@
   <a th:href="@{/bankAccounts}">My bank accounts</a>
 </div>
 <div>
+  <a th:href="@{/bankAccountTransactions}">My bank account transactions</a>
+</div>
+<div>
   <a th:href="@{/creditCards}">My credit cards</a>
 </div>
 <div>
   <a th:href="@{/creditCardTransactions}">My credit card transactions</a>
 </div>
 <div>
-  <button><td class="align-middle" th:text="${user.balance}"></td></button>
+  <button><td class="align-middle" th:text="${#numbers.formatDecimal(user.balance,2,2)}"></td>
+    <td class="align-middle" th:text="${user.balanceCurrencyCode}"></td></button>
 </div>
 </body>
 </html>
