--- a/src/main/resources/templates/new-contact-form.html
+++ b/src/main/resources/templates/new-contact-form.html
@@ -43,9 +43,16 @@
 
       <form th:action="@{/addContact}" method="post" th:object="${contact}">
 
+
         <div th:if="${param.error}">
-          <div class="alert alert-danger">Invalid email address</div>
+          <div class="alert alert-danger">
+            <tr th:if="${errors.isEmpty()}">An error occurred</tr>
+            <ul>
+              <li th:each="error, stat : ${errors}" th:text="${error.defaultMessage}" class="error"/>
+            </ul>
+          </div>
         </div>
+
 
         <div class="form-group">
           <label class="control-label" for="email"> Email </label> <input
