--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -42,12 +42,13 @@
 
             <h1>Registration</h1>
 
-            <div th:if="${param.alreadyRegistered}">
-                <div class="alert alert-danger">There is already an account registered with that email</div>
-            </div>
-
             <div th:if="${param.error}">
-                <div class="alert alert-danger">Invalid email or password</div>
+                <div class="alert alert-danger">
+                    <tr th:if="${errors.isEmpty()}">An error occurred</tr>
+                    <ul>
+                        <li th:each="error, stat : ${errors}" th:text="${error.defaultMessage}" class="error"/>
+                    </ul>
+                </div>
             </div>
 
             <form th:action="@{/registration}" method="post" th:object="${user}">
