--- a/src/main/resources/templates/transaction-form.html
+++ b/src/main/resources/templates/transaction-form.html
@@ -43,7 +43,12 @@
             <form th:action="@{/transaction}" method="post" th:object="${transaction}">
 
                 <div th:if="${param.error}">
-                    <div class="alert alert-danger">Can't proceed transaction</div>
+                    <div class="alert alert-danger">
+                        <tr th:if="${errors.isEmpty()}">An error occurred</tr>
+                        <ul>
+                            <li th:each="error, stat : ${errors}" th:text="${error.defaultMessage}" class="error"/>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="form-group">
