--- a/src/main/resources/templates/transaction-form.html
+++ b/src/main/resources/templates/transaction-form.html
@@ -53,7 +53,7 @@
 
                 <div class="form-group">
                     <label class="control-label"> Amount </label> <input
-                        id="amount" class="form-control" type="number"
+                        id="amount" class="form-control" type="number" step=".01"
                         th:field="*{amount}" required autofocus="autofocus" />
                 </div>
 
