--- a/src/main/resources/templates/new-contact-form.html
+++ b/src/main/resources/templates/new-contact-form.html
@@ -62,7 +62,7 @@
 
 
         <div class="form-group">
-          <button type="submit" class="btn btn-success">Add contact</button>
+          <button type="submit" class="btn btn-success">Add contact</button> <a th:href="@{/contacts}">Go back to contact list</a>
         </div>
       </form>
     </div>
