--- a/src/main/resources/templates/bank-accounts.html
+++ b/src/main/resources/templates/bank-accounts.html
@@ -34,19 +34,43 @@
     <div class = "row">
         <div class = "col-md-6 col-md-offset-3">
 
-            <h1> Your bank accounts </h1>
-
+            <div class="py-3">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 text-left">
+                            <h3 class="">My bank accounts<br></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <tr th:if="${bankAccounts.isEmpty()}">
-                <td class="text-center" colspan="3">You don't have any bank account linked to your Pay My Buddy account.</td>
+                <td class="text-center" colspan="3">You don't have any bank account linked to your Pay My Buddy
+                    account.
+                </td>
             </tr>
+            <div class="py-2">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3 bg-success">
+                            <h4 class="text-center">Iban<br></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="">
+                <div class="container">
+                    <div class="row" data-th-each="bankAccount : ${ bankAccounts }">
+                        <div class="col-md-3 text-center" data-th-text="${ bankAccount.iban }"></div><br><br>
+                    </div>
+                </div>
+            </div>
 
-            <tr th:each="bankAccount, stat : ${bankAccounts}">
-                <button><td class="align-middle" th:text="${bankAccount.iban}"></td></button>
-            </tr>
-
+            <br>
             <div class="form-group">
-                <span>Add a new bank account ? <a href="/" th:href="@{/addBankAccount}">Click here</a></span>
+                <span>Add a new bank account ? <a th:href="@{/addBankAccount}">Click here</a></span><br>
+                <span>Fund your Pay My Buddy account using one of your bank accounts ? <a th:href="@{/bankAccountTransaction}">Click here</a> </span><br>
+                <span><a href="/" th:href="@{/bankAccountTransactions}">Bank account transactions history</a></span>
             </div>
         </div>
     </div>
