--- a/src/main/resources/templates/contact-list.html
+++ b/src/main/resources/templates/contact-list.html
@@ -30,23 +30,47 @@
 
 <br>
 <br>
-<div class = "container">
-    <div class = "row">
-        <div class = "col-md-6 col-md-offset-3">
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
 
-            <h1> Your contacts </h1>
 
+            <div class="py-3">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 text-left">
+                            <h3 class="">My contacts<br></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <tr th:if="${contactList.isEmpty()}">
                 <td class="text-center" colspan="3">You don't have any friend :'(</td>
             </tr>
 
+            <br><br>
 
-                <tr th:each="contact, stat : ${contactList}">
-                    <button><td class="align-middle" th:text="${contact.email}"></td></button>
-                </tr>
+            <div class="py-2">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3 bg-success">
+                            <h5 class="text-center">Contacts emails<br></h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="">
+                <div class="container">
+                    <div class="row" data-th-each="creditCard : ${ creditCards }">
+                        <div class="col-md-3 text-center" data-th-text="${ creditCard.cardNumber }"></div>
+                    </div>
+                </div>
+            </div>
+
+            <br>
             <div class="form-group">
-      <span>Add a new contact ? <a href="/" th:href="@{/addContact}">Click here</a></span>
+                <span>Add a new contact ? <a th:href="@{/addContact}">Click here</a></span><br>
             </div>
         </div>
     </div>
