--- a/src/main/resources/templates/credit-card-transaction-form.html
+++ b/src/main/resources/templates/credit-card-transaction-form.html
@@ -49,6 +49,14 @@
                 </div>
             </div>
 
+            <div th:if="${creditCards.isEmpty()}">
+                <div class="alert alert-info">
+                    <td class="text-center" colspan="3">You don't have any credit card linked to your Pay My Buddy
+                        account.
+                    </td>
+                </div>
+            </div>
+
             <form th:action="@{/creditCardTransaction}" method="post" th:object="${creditCardTransaction}">
 
                 <div class="form-group">
@@ -66,6 +74,7 @@
                 </div>
 
                 <div class="form-group">
+                    Card number :
                     <select th:field="*{cardNumber}">
                         <option th:each="card, stat : ${creditCards}" th:value="${card.cardNumber}" th:text="${card.cardNumber}"></option>
                     </select>
