--- a/src/main/resources/templates/credit-card-transaction-history.html
+++ b/src/main/resources/templates/credit-card-transaction-history.html
@@ -34,13 +34,41 @@
     <div class = "row">
         <div class = "col-md-6 col-md-offset-3">
 
-            <h1> Your credit card transactions </h1>
 
-            <tr th:each="transaction, stat : ${creditCardTransactions}">
-                <button>amount : <td class="align-middle" th:text="${transaction.amount}"></td> <td class="align-middle" th:text="${transaction.currencyCode}"></td>
-                <br>card number : <td class="align-middle" th:text="${transaction.cardNumber}"></td></button>
-            </tr>
+            <div class="py-3">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 text-left">
+                            <h3 class="">My credit card transactions<br></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="py-2">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3 bg-success">
+                            <h6 class="text-center">Card number<br></h6>
+                        </div>
 
+                        <div class="col-md-3 bg-success">
+                            <h6 class="text-center">Amount<br></h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="">
+                <div class="container">
+                    <div class="row" data-th-each="transaction : ${ creditCardTransactions }">
+                        <div class="col-md-3 text-center" data-th-text="${ transaction.cardNumber }"></div>
+                        <div class="col-md-3 text-center"
+                             data-th-text="${#numbers.formatDecimal(transaction.amount,2,2) + ' ' + transaction.currencyCode}"></div><br><br>
+                    </div>
+                </div>
+            </div>
+
+            <br>
             <div class="form-group">
                 <span>Send money to your Pay My Buddy account with one of your credit cards ? <a href="/" th:href="@{/creditCardTransaction}">Click here</a></span>
             </div>
