--- a/src/main/resources/templates/credit-cards.html
+++ b/src/main/resources/templates/credit-cards.html
@@ -1,55 +1,81 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="ISO-8859-1">
-  <title>Credit cards</title>
+    <meta charset="ISO-8859-1">
+    <title>Credit cards</title>
 
-  <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
 
 </head>
 <body>
 
 <!-- create navigation bar ( header) -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed"
-              data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-              aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span> <span
-              class="icon-bar"></span> <span class="icon-bar"></span> <span
-              class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#" th:href="@{/}">Pay My Buddy</a>
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed"
+                    data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span> <span
+                    class="icon-bar"></span> <span class="icon-bar"></span> <span
+                    class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#" th:href="@{/}">Pay My Buddy</a>
+        </div>
     </div>
-  </div>
 </nav>
 
 <br>
 <br>
-<div class = "container">
-  <div class = "row">
-    <div class = "col-md-6 col-md-offset-3">
-
-      <h1> Your credit cards </h1>
-
-      <tr th:if="${creditCards.isEmpty()}">
-        <td class="text-center" colspan="3">You don't have any credit card linked to your Pay My Buddy account.</td>
-      </tr>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
 
 
-      <tr th:each="creditCard, stat : ${creditCards}">
-        <button><td class="align-middle" th:text="${creditCard.cardNumber}"></td></button>
-      </tr>
+            <div class="py-3">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 text-left">
+                            <h3 class="">My credit cards<br></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <tr th:if="${creditCards.isEmpty()}">
+                <td class="text-center" colspan="3">You don't have any credit card linked to your Pay My Buddy
+                    account.
+                </td>
+            </tr>
+            <div class="py-2">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3 bg-success">
+                            <h4 class="text-center">Card number<br></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-      <div class="form-group">
-        <span>Add a new credit card ? <a href="/" th:href="@{/addCreditCard}">Click here</a></span>
-      </div>
+            <div class="">
+                <div class="container">
+                    <div class="row" data-th-each="creditCard : ${ creditCards }">
+                        <div class="col-md-3 text-center" data-th-text="${ creditCard.cardNumber }"></div><br><br>
+                    </div>
+                </div>
+            </div>
+
+            <br>
+            <div class="form-group">
+                <span>Add a new credit card ? <a th:href="@{/addCreditCard}">Click here</a></span><br>
+                <span>Fund your Pay My Buddy account with one of your credit cards ? <a
+                        th:href="@{/creditCardTransaction}">Click here</a></span><br>
+                <span><a href="/" th:href="@{/creditCardTransactions}">Credit card transactions history</a></span>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 </body>
 </html>
